[package]
name = "rebar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.2.1"
env_logger = "0.10.0"
font-kit = "0.11.0"
indicatif = {version = "0.17.5", features = ["rayon"]}
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.17"
petgraph = { version = "0.6.3", features = ["serde-1"] }
raqote = "0.8.2"
rayon = "1.7.0"
rusttype = "0.9.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tabled = "0.12.0"
tempfile = "3.5.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.18"
url = "2.3.1"
zstd = "0.12.3+zstd.1.5.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
