[package]
name = "rebar"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono          = { version = "0.4.31",  default-features = false, features = ["clock", "serde"] }
clap            = { version = "4.2.7",   default-features = true,  features = ["derive", "string"] }
color-eyre      = { version = "0.6.2",   default-features = false }
either          = { version = "1.9.0",   default-features = false }
env_logger      = { version = "0.10.0",  default-features = false }
image           = { version = "0.24.6",  default-features = false }
indicatif       = { version = "0.17.5",  default-features = false, features = ["rayon"]}
indoc           = { version = "2.0.4",   default-features = false }
itertools       = { version = "0.12.0",  default-features = false, features = ["use_std"] }
log             = { version = "0.4.17",  default-features = false }
noodles         = { version = "0.59.0",  default-features = false, features = ["core", "fasta"]}
openssl         = { version = "0.10.60", default-features = false, features = ["vendored"]}
petgraph        = { version = "0.6.3",   default-features = false, features = ["serde-1"] }
raqote          = { version = "0.8.2",   default-features = false, features = ["png"]}
rand            = { version = "0.8.5",   default-features = false, features = ["std", "std_rng"] }
rayon           = { version = "1.7.0",   default-features = false }
reqwest         = { version = "0.11.18", default-features = true,  features = ["json"] }
rustix          = { version = "0.38.25", default-features = false }
rusttype        = { version = "0.9.3",   default-features = false, features = ["std"]}
semver          = { version = "1.0.19",  default-features = false, features = ["std"] }
serde           = { version = "1.0.163", default-features = false, features = ["derive"] }
serde_json      = { version = "1.0.96",  default-features = false }
strum           = { version = "0.25",    default-features = false, features = ["derive"] }
tempfile        = { version = "3.8.1",   default-features = false }
tokio           = { version = "1.28.1",  default-features = false, features = ["macros", "rt-multi-thread"] }
zstd            = { version = "0.13.0",  default-features = false }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Binary size reduction tips from: https://github.com/johnthagen/min-sized-rust
strip         = true  # Strip Symbols from Binary
lto           = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

# A profile for compiling for flamegraph visualization
[profile.flamegraph]
inherits = "release"
debug = true
strip = false
